syntax = "proto2";

package com.droi.app.maker.common.utils.proto;
option java_package = "com.droi.app.maker.common.utils.proto";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message ScreenEvent {
    enum Type {

        UNKNOWN = 0;

        HOME = 1;

        TASK = 2;

        PROFIT = 3;

        PERSON = 4;
    }
}
